Modify the dir structure and update bower

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "jquery-toast-plugin",
   "description": "A highly customizable jquery toast plugin",
+  "version": "0.2",
   "main": [
     "./dist/jquery.toast.min.js",
     "./dist/jquery.toast.min.css"
