--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jquery-toast-plugin",
   "filename": "dist/jquery.toast.min.js",
-  "main": "jquery.toast.js",
+  "main": "dist/jquery.toast.min.js",
   "style": "dist/jquery.toast.min.css",
   "version": "1.3.0",
   "description": "Highly customizable jquery plugin to show toast messages",
