Update package info

--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "maintainers": [
     {
       "name": "Kamran Ahmed",
-      "web": "http://kamranahmed.info",
-      "twitter": "@kamranahmed_se"
+      "web": "http://kamranahmed.info"
     }
   ],
   "repository": {
